# gamma

./: .gitignore  LICENSE.md  README.md  WORKSPACE
examples/cpp/: BUILD.bazel  hello_world.cpp
gamma/: BUILD  BUILD.bazel  gamma_main.cpp
gamma/app/: BUILD.bazel  app.cpp  app.hpp  app_settings.proto  window.cpp  window.hpp  window_settings.proto
gamma/application/: BUILD.bazel  application.cpp  application.hpp
gamma/common/: BUILD.bazel  function.hpp  function_queue.cpp  function_queue.hpp  function_queue_test.cpp  function_test.cpp  glfw.hpp  init.cpp  init.hpp  log.cpp  log.hpp  log_test.cpp  watch.hpp  watch_test.cpp
gamma/embed/lua/: BUILD.bazel
gamma/engine/: BUILD.bazel  engine.cpp  engine.hpp  engine_settings.proto  init.cpp  init.hpp  world.hpp
gamma/game/: BUILD  game.hpp
gamma/graphics/: BUILD.bazel  camera.hpp  framebuffer.hpp  init.cpp  init.hpp  material.hpp  mesh.hpp  pipeline.hpp  scene.hpp  view.hpp  window.cpp  window.hpp  window_settings.proto
gamma/graphics/platform/vk/: BUILD.bazel
gamma/graphics/vk/: BUILD.bazel  context.hpp  device.cpp  device.hpp  framebuffer.hpp  glfw.cpp  glfw.hpp  glsl.cpp  glsl.hpp  instance.hpp  instance_test.cpp  pipeline.cpp  pipeline.hpp  queue.hpp  render_pass.hpp  semaphore.hpp  shader_module.cpp  shader_module.hpp  state.hpp  surface.hpp  swapchain.cpp  swapchain.hpp
gamma/physics/: BUILD.bazel
gamma/runtime/lua/: BUILD.bazel  access.hpp  call_test.cpp  function.cpp  function.hpp  function_test.cpp  gluamma_main.cpp  reference.cpp  reference_test.cpp  run.hpp  stack_test.cpp  state.cpp  state.hpp  table.cpp  table.hpp  table_test.cpp  test_base.hpp
gamma/scripting/lua/: BUILD.bazel  access.hpp  call.hpp  call_test.cpp  exposure.cpp  exposure.hpp  function.cpp  function.hpp  function_test.cpp  invoke.hpp  invoke_test.cpp  reference.cpp  reference.hpp  reference_test.cpp  run.hpp  stack.hpp  stack_test.cpp  state.cpp  state.hpp  state_test.cpp  table.cpp  table.hpp  table_test.cpp  test_base.hpp  wrapper.hpp
