# Copyright (c) 2018-2019 Aleksey Strelnikov
#
# This software is provided 'as-is', without any express or implied
# warranty. In no event will the authors be held liable for any damages
# arising from the use of this software.
#
# Permission is granted to anyone to use this software for any purpose,
# including commercial applications, and to alter it and redistribute it
# freely, subject to the following restrictions:
#
# 1. The origin of this software must not be misrepresented; you must not
#    claim that you wrote the original software. If you use this software
#    in a product, an acknowledgment in the product documentation would be
#    appreciated but is not required.
# 2. Altered source versions must be plainly marked as such, and must not be
#    misrepresented as being the original software.
# 3. This notice may not be removed or altered from any source distribution.

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "window_settings_proto",
    srcs = ["window_settings.proto"],
)

proto_library(
    name = "app_settings_proto",
    srcs = ["app_settings.proto"],
    deps = [":window_settings_proto"],
)

cc_proto_library(
    name = "window_settings_cc_proto",
    deps = [":window_settings_proto"],
)

cc_proto_library(
    name = "app_settings_cc_proto",
    deps = [":app_settings_proto"],
)

cc_library(
    name = "app",
    hdrs = [
        "app.hpp",
        "window.hpp",
    ],
    srcs = [
        "app.cpp",
        "window.cpp",
    ],
    deps = [
        ":app_settings_cc_proto",
        "//gamma/common:glfw",
        "//gamma/common:function_queue",
        "//gamma/common:watch",
        "//gamma/graphics/vk",
        "@com_google_absl//absl/memory",
    ],
)
