# Copyright (c) 2018-2019 Aleksey Strelnikov
#
# This software is provided 'as-is', without any express or implied
# warranty. In no event will the authors be held liable for any damages
# arising from the use of this software.
#
# Permission is granted to anyone to use this software for any purpose,
# including commercial applications, and to alter it and redistribute it
# freely, subject to the following restrictions:
#
# 1. The origin of this software must not be misrepresented; you must not
#    claim that you wrote the original software. If you use this software
#    in a product, an acknowledgment in the product documentation would be
#    appreciated but is not required.
# 2. Altered source versions must be plainly marked as such, and must not be
#    misrepresented as being the original software.
# 3. This notice may not be removed or altered from any source distribution.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vk",
    hdrs = [
        "context.hpp",
        "device.hpp",
        "framebuffer.hpp",
        "glfw.hpp",
        "glsl.hpp",
        "instance.hpp",
        "pipeline.hpp",
        "queue.hpp",
        "render_pass.hpp",
        "shader_module.hpp",
        "surface.hpp",
        "swapchain.hpp",
    ],
    srcs = [
        "device.cpp",
        "glfw.cpp",
        "glsl.cpp",
        "pipeline.cpp",
        "shader_module.cpp",
        "swapchain.cpp",
    ],
    deps = [
        "//gamma/common:log",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:fixed_array",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@glfw//:glfw",
        "@shaderc//:shaderc",
    ],
)

cc_test(
    name = "instance_test",
    srcs = ["instance_test.cpp"],
    deps = [
        ":vk",
        "@com_google_googletest//:gtest_main",
    ],
)
